; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/graphics-hook/extr_graphics-hook.c_init_mutexes.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/graphics-hook/extr_graphics-hook.c_init_mutexes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MUTEX_TEXTURE1 = common dso_local global i32 0, align 4
@tex_mutexes = common dso_local global i64* null, align 8
@MUTEX_TEXTURE2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @init_mutexes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_mutexes() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @GetCurrentProcessId()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* @MUTEX_TEXTURE1, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i64 @init_mutex(i32 %4, i32 %5)
  %7 = load i64*, i64** @tex_mutexes, align 8
  %8 = getelementptr inbounds i64, i64* %7, i64 0
  store i64 %6, i64* %8, align 8
  %9 = load i64*, i64** @tex_mutexes, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %26

14:                                               ; preds = %0
  %15 = load i32, i32* @MUTEX_TEXTURE2, align 4
  %16 = load i32, i32* %2, align 4
  %17 = call i64 @init_mutex(i32 %15, i32 %16)
  %18 = load i64*, i64** @tex_mutexes, align 8
  %19 = getelementptr inbounds i64, i64* %18, i64 1
  store i64 %17, i64* %19, align 8
  %20 = load i64*, i64** @tex_mutexes, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 1
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %14
  store i32 0, i32* %1, align 4
  br label %26

25:                                               ; preds = %14
  store i32 1, i32* %1, align 4
  br label %26

26:                                               ; preds = %25, %24, %13
  %27 = load i32, i32* %1, align 4
  ret i32 %27
}

declare dso_local i32 @GetCurrentProcessId(...) #1

declare dso_local i64 @init_mutex(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
